[gd_scene load_steps=12 format=3 uid="uid://0gfs60vudxww"]

[ext_resource type="Script" uid="uid://dxbhtef1kc644" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://cu50bs4j1ebye" path="res://textures/golfball.png" id="3_bqqt6"]
[ext_resource type="Script" uid="uid://bhtrcwuqa413w" path="res://scenes/cpu_particles_2d.gd" id="4_wu84c"]

[sub_resource type="LabelSettings" id="LabelSettings_l6cm7"]
font_size = 50
outline_size = 20
outline_color = Color(0.344076, 0.344076, 0.344076, 1)

[sub_resource type="Gradient" id="Gradient_l6cm7"]
colors = PackedColorArray(0.187176, 0.187176, 0.187176, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ekxnf"]
gradient = SubResource("Gradient_l6cm7")

[sub_resource type="Curve" id="Curve_8ln24"]
_limits = [-360.0, 360.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.227273, 327.64), 0.0, 0.0, 0, 0, Vector2(0.511364, 230.562), 0.0, 0.0, 0, 0, Vector2(0.886364, 327.64), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="Curve" id="Curve_rtw2f"]
_data = [Vector2(0.0909091, 0.573034), 0.0, 0.0, 0, 0, Vector2(0.244318, 0.775281), 0.0, 0.0, 0, 0, Vector2(0.517045, 1), 0.0, 0.0, 0, 0, Vector2(0.653409, 0.651685), 0.0, 0.0, 0, 0, Vector2(0.761364, 0.606742), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="Animation" id="Animation_8ln24"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CPUParticles2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, -238)]
}

[sub_resource type="Animation" id="Animation_wu84c"]
resource_name = "XX"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CPUParticles2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, -238), Vector2(1150, -238)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rtw2f"]
_data = {
&"RESET": SubResource("Animation_8ln24"),
&"XX": SubResource("Animation_wu84c")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.0
offset_top = -283.0
offset_right = 287.0
offset_bottom = -183.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Golf: Stroke of Madness"
label_settings = SubResource("LabelSettings_l6cm7")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 204.0
offset_right = 150.0
offset_bottom = 281.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="LevelSelectButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 299.0
offset_right = 150.0
offset_bottom = 376.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Level Select"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 395.0
offset_right = 150.0
offset_bottom = 472.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Sprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(594, 327)
scale = Vector2(-19.4037, 12.6757)
texture = SubResource("GradientTexture2D_ekxnf")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(594, 327)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color(0.323737, 0.324039, 0.251711, 1)
show_behind_parent = true
position = Vector2(17, -238)
amount = 50
texture = ExtResource("3_bqqt6")
lifetime = 8.79
randomness = 1.0
emission_shape = 5
emission_points = PackedVector2Array()
emission_normals = PackedVector2Array()
emission_colors = PackedColorArray()
direction = Vector2(60, 120)
spread = 180.0
gravity = Vector2(5, 50)
angular_velocity_min = -446.19
angular_velocity_max = 304.23
angle_min = 43.6
angle_max = 130.9
angle_curve = SubResource("Curve_8ln24")
scale_amount_curve = SubResource("Curve_rtw2f")
script = ExtResource("4_wu84c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rtw2f")
}

[node name="LevelSelectGrid" type="GridContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 395.0
offset_top = 205.0
offset_right = 435.0
offset_bottom = 245.0
scale = Vector2(2.04, 1)
columns = 5

[node name="Level1" type="Button" parent="LevelSelectGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "1"

[node name="Level2" type="Button" parent="LevelSelectGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "2
"

[node name="Level3" type="Button" parent="LevelSelectGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "3"

[node name="LevelSelectBackButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 426.0
offset_top = 490.0
offset_right = 726.0
offset_bottom = 567.0
theme_override_font_sizes/font_size = 50
text = "Back"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="LevelSelectGrid/Level1" to="." method="_on_level_pressed" binds= [1]]
[connection signal="pressed" from="LevelSelectGrid/Level2" to="." method="_on_level_pressed" binds= [2]]
[connection signal="pressed" from="LevelSelectGrid/Level3" to="." method="_on_level_pressed" binds= [3]]
[connection signal="pressed" from="LevelSelectBackButton" to="." method="_on_level_select_back_button_pressed"]
